--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,8 +8,16 @@
   ],
   "routes": [
     {
+      "src": "/api",
+      "dest": "src/server.ts"
+    },
+    {
       "src": "/api/(.*)",
-      "dest": "src/server.js"
+      "dest": "src/server.ts"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "src/server.ts"
     }
   ]
 }
