--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "nodemon"
+    "start": "npx nodemon src/server.ts",
+    "dev": "npx nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
