--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,18 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/server.js",
+      "src": "src/server.ts",
       "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "vercel-sapper"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/server.js",
+      "dest": "src/server.ts",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "*"
