--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.10",
