--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dompurify": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^22.10.10",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
